--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,15 +8,16 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  build: ^2.3.1
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  build: ^2.3.1
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  build_runner: ^2.3.3
+  build_test: ^2.1.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
